--- a/dev/lang/php_en.json
+++ b/dev/lang/php_en.json
@@ -238,16 +238,16 @@
     "dashboard.menu.payment_methods": "Payment methods",
     "dashboard.menu.verification_methods": "Verification methods",
     "dashboard.menu.order_payment_methods": "Order Payments Methods",
-    "dashboard.pages.order_payment_methods.if_you_have_any_questions": "If you have any questions about the above, you can contact us by email:",
-    "dashboard.pages.order_payment_methods.if_you_have_any_questions_link": " or by telephone on ",
+    "dashboard.pages.order_payment_methods.if_you_have_any_questions": "If you have any questions about this plugin from Buckaroo, then you can contact us by e-mail:",
     "dashboard.pages.order_payment_methods.order_payment_methods": "Order Payment Methods",
     "dashboard.pages.order_payment_methods.order_payment_methods_label": "Change the order of payment methods.",
     "dashboard.pages.order_payment_methods.all_countries": "All Countries",
+    "dashboard.pages.order_payment_methods.all_coquesuntries": "All Countries",
     "dashboard.pages.order_payment_methods.search_country": "Search country",
     "dashboard.pages.order_payment_methods.payment_method_order_updated_successfully": "Payment method order updated successfully.",
     "dashboard.pages.order_payment_methods.something_went_wrong": "Something went wrong.",
     "dashboard.pages.order_payment_methods.how_to_order_payment_method": "How to change the order of the payment methods in the checkout",
-    "dashboard.pages.order_payment_methods.explanation_intro": "You can easily change the order of the payment methods by dragging them into the right place, from top to bottom.\nEven setting a specific payment method order for a specific country is possible.\nThis so you can highlight local payment methods for customers across different countries..",
+    "dashboard.pages.order_payment_methods.explanation_intro": "You can easily change the order of the payment methods by dragging them into the right place, from top to bottom.\nEven setting a specific payment method order for a specific country is possible.\nThis so you can highlight local payment methods for customers across different countries.",
     "dashboard.pages.order_payment_methods.step_one": "First select the country for which you want to change the display order of the payment methods.\nOr you can select “All Countries” to use a specific order of the payment methods globally.",
     "dashboard.pages.order_payment_methods.step_two": "Drag and drop the payment methods in the order of your liking.\nThis can be done by dragging them from top to bottom with the arrow icons.",
     "dashboard.pages.order_payment_methods.step_three": "Save your chosen payment methods order and check if the payment methods are showed in the correct order in the checkout of your webshop.",
@@ -355,6 +355,8 @@
     "dashboard.pages.settings.example": "Example",
     "dashboard.pages.settings.order_number": "Order number",
     "dashboard.pages.settings.shop_name": "Shop name",
+    "dashboard.pages.settings.order_number2": "order_number",
+    "dashboard.pages.settings.shop_name2": "shop_name",
     "dashboard.pages.settings.refunds": "Refunds",
     "dashboard.pages.settings.refunds_label": "Refund Description",
     "dashboard.pages.settings.return_url": "Return URL",
