--- a/dev/lang/php_nl.json
+++ b/dev/lang/php_nl.json
@@ -240,6 +240,8 @@
   "dashboard.menu.verification_methods": "Verificatiemethoden",
   "dashboard.menu.order_payment_methods": "Betaalmethoden Volgorde",
   "dashboard.pages.order_payment_methods.order_payment_methods": "Betaalmethode volgorde",
+  "dashboard.pages.order_payment_methods.if_you_have_any_questions": "Heeft u vragen over deze plugin van Buckaroo, dan kunt u contact met ons opnemen via e-mail:",
+  "dashboard.pages.order_payment_methods.if_you_have_any_questions_link": " of telefoon ",
   "dashboard.pages.order_payment_methods.order_payment_methods_label": "Wijzig de volgorde van betaalmethoden",
   "dashboard.pages.order_payment_methods.all_countries": "Alle landen",
   "dashboard.pages.order_payment_methods.search_country": "Zoek land",
@@ -350,6 +352,8 @@
   "dashboard.pages.settings.example": "Voorbeeld",
   "dashboard.pages.settings.order_number": "Bestellingsnummer",
   "dashboard.pages.settings.shop_name": "Winkelnaam",
+  "dashboard.pages.settings.order_number2": "bestellingsnummer",
+  "dashboard.pages.settings.shop_name2": "winkelnaam",
   "dashboard.pages.settings.refunds": "Terugbetalingen",
   "dashboard.pages.settings.refunds_label": "Terugbetaling omschrijving",
   "dashboard.pages.settings.return_url": "Return-URL",
