Apple Pay display on mobile only

--- a/dev/lang/php_nl.json
+++ b/dev/lang/php_nl.json
@@ -397,8 +397,10 @@
   "payment_methods.przelewy24": "Przelewy24",
   "payment_methods.payperemail": "PayPerEmail",
   "payment_methods.payconiq": "Payconiq",
+  "payment_methods.bancontact": "Bancontact",
   "payment_methods.tinka": "Tinka",
   "payment_methods.paypal": "PayPal",
+  "payment_methods.idin": "Idin",
   "payment_methods.bancontactmrcash": "Bancontact",
   "payment_methods.sofort": "Sofort",
   "payment_methods.giropay": "Giropay",
