fix idin in order page

--- a/dev/lang/php_nl.json
+++ b/dev/lang/php_nl.json
@@ -408,5 +408,6 @@
   "payment_methods.transfer": "Transfer",
   "payment_methods.wechatpay": "WeChatPay",
   "payment_methods.alipay": "Alipay",
+  "payment_methods.idin": "iDIN",
   "verification_methods.idin": "iDIN"
 }
