--- a/dev/lang/php_en.json
+++ b/dev/lang/php_en.json
@@ -417,5 +417,6 @@
     "payment_methods.wechatpay": "WeChatPay",
     "payment_methods.alipay": "Alipay",
     "payment_methods.idin": "iDIN",
+    "payment_methods.multibanco": "Multibanco",
     "verification_methods.idin": "iDIN"
 }
