--- a/dev/lang/php_nl.json
+++ b/dev/lang/php_nl.json
@@ -409,5 +409,6 @@
   "payment_methods.wechatpay": "WeChatPay",
   "payment_methods.alipay": "Alipay",
   "payment_methods.idin": "iDIN",
+  "payment_methods.multibanco": "Multibanco",
   "verification_methods.idin": "iDIN"
 }
