--- a/dev/lang/php_en.json
+++ b/dev/lang/php_en.json
@@ -316,8 +316,8 @@
     "dashboard.pages.payments.min_order_amount_b2b": "Minimum B2B order amount",
     "dashboard.pages.payments.max_order_amount_b2c": "Maximum B2B order amount",
     "dashboard.pages.payments.in3.version.label": "In3 version",
-    "dashboard.pages.payments.in3.version.v3": "V3 (V3)",
-    "dashboard.pages.payments.in3.version.v2": "V2 (Capayable/In2)",
+    "dashboard.pages.payments.in3.version.v3": "V3 (iDEAL In3)",
+    "dashboard.pages.payments.in3.version.v2": "V2 (Capayabel/In3)",
     "dashboard.pages.payments.customer.type_label": "Customer Type",
     "dashboard.pages.payments.customer.type.both": "Both",
     "dashboard.pages.payments.customer.type.b2c": "B2C",
