--- a/dev/lang/php_nl.json
+++ b/dev/lang/php_nl.json
@@ -316,8 +316,8 @@
   "dashboard.pages.payments.min_order_amount_b2b": "Minimale B2B bestelbedrag",
   "dashboard.pages.payments.max_order_amount_b2c": "Maximale B2B bestelbedrag",
   "dashboard.pages.payments.in3.version.label": "In3 versie",
-  "dashboard.pages.payments.in3.version.v3": "V3 (V3)",
-  "dashboard.pages.payments.in3.version.v2": "V2 (Capayable/In2)",
+  "dashboard.pages.payments.in3.version.v3": "V3 (iDEAL In3)",
+  "dashboard.pages.payments.in3.version.v2": "V2 (Capayabel/In3)",
   "dashboard.pages.payments.customer.type_label": "Klanttype",
   "dashboard.pages.payments.customer.type.both": "Beide",
   "dashboard.pages.payments.customer.type.b2c": "B2C",
