--- a/dev/lang/php_nl.json
+++ b/dev/lang/php_nl.json
@@ -248,24 +248,24 @@
   "dashboard.pages.order_payment_methods.payment_method_order_updated_successfully": "Betaalmethoden volgorde succesvol geüpdatet.",
   "dashboard.pages.order_payment_methods.something_went_wrong": "Er is iets fout gegaan.",
   "dashboard.pages.order_payment_methods.how_to_order_payment_method": "Hoe u uw betaalmethode volgorde aan kunt passen",
-  "dashboard.pages.order_payment_methods.explanation_intro": "Om de betaalmethoden per land in de juiste volgorde in te stellen, dien je aan de linkerkant van dit scherm het gewenste land te selecteren. Je krijgt dan een overzicht van de betaalmethoden die voor dat land 'aan' staan. Je kunt ze vervolgens in de juiste volgorde zetten door te slepen <a href='https://docs.buckaroo.io/docs/prestashop' target='_blank' class='bg-primary inline-block rounded text-white p-1'>page</a>.",
-  "dashboard.pages.order_payment_methods.step_one": "Selecteer het land waarvoor je de volgorde van de betaalmethoden wilt wijzigen.",
-  "dashboard.pages.order_payment_methods.step_two": "Sleep de betaalmethoden in de volgorde van je voorkeur.",
-  "dashboard.pages.order_payment_methods.step_three": "Sla op en controleer in je webshop (checkout) of alles correct is.",
-  "dashboard.pages.payments.configure_your_payment_name_settings": "Configureer je instellingen voor {payment_name}",
-  "dashboard.pages.payments.configure_your_verification_name_settings": "Configureer je instellingen voor {verification_name}",
+  "dashboard.pages.order_payment_methods.explanation_intro": "Om de betaalmethoden per land in de juiste volgorde in te stellen, dient u aan de linkerkant van dit scherm het gewenste land te selecteren. Uw krijgt dan een overzicht van de betaalmethoden die voor dat land 'aan' staan. U kunt vervolgens de betaalmethoden in de juiste volgorde zetten door te slepen.",
+  "dashboard.pages.order_payment_methods.step_one": "Selecteer het land waarvoor u de volgorde van de betaalmethoden wilt wijzigen.",
+  "dashboard.pages.order_payment_methods.step_two": "Sleep de betaalmethoden in de volgorde van uw voorkeur.",
+  "dashboard.pages.order_payment_methods.step_three": "Sla de instellingen op en controleer in uw webshop (checkout) of alles correct weergeven wordt.",
+  "dashboard.pages.payments.configure_your_payment_name_settings": "Configureer uw instellingen voor {payment_name}",
+  "dashboard.pages.payments.configure_your_verification_name_settings": "Configureer uw instellingen voor {verification_name}",
   "dashboard.pages.payments.modes_settings.live": "Live",
   "dashboard.pages.payments.modes_settings.test": "Test",
   "dashboard.pages.payments.modes_settings.off": "Uit",
-  "dashboard.pages.payments.configure": "Configureer",
+  "dashboard.pages.payments.configure": "Configuratie",
   "dashboard.pages.payments.settings": "Instellingen",
   "dashboard.pages.payments.save": "Opslaan",
   "dashboard.pages.payments.mode": "Modus",
-  "dashboard.pages.payments.mode_label": "Indien ingesteld op \"Live\", dan kun je daadwerkelijke betalingen doen. Indien ingesteld op \"Test\", dan kun je testtransacties doen. De betaalmethode verschijnt niet als deze op \"Uit\" staat.",
+  "dashboard.pages.payments.mode_label": "Indien ingesteld op \"Live\", dan kunt u daadwerkelijke betalingen doen. Indien ingesteld op \"Test\", dan kun je testtransacties doen. De betaalmethode verschijnt niet als deze op \"Uit\" staat.",
   "dashboard.pages.payments.front_label": "Betaalmethode naam",
   "dashboard.pages.payments.front_label_label": "Deze naam wordt weergegeven in de checkout.",
   "dashboard.pages.payments.payment_fee_incl_vat": "Betaalkosten incl. BTW",
-  "dashboard.pages.payments.payment_fee_incl_vat_label": "Je kunt kosten in rekening brengen wanneer de klant deze betaling selecteert. Specificeer statisch (bijv. 1,50). Decimalen moeten worden gescheiden door een punt (.)",
+  "dashboard.pages.payments.payment_fee_incl_vat_label": "U kunt kosten in rekening brengen wanneer de klant deze betaalmethode selecteert. Specificeer statisch (bijv. 1,50). Decimalen moeten worden gescheiden door een punt (.)",
   "dashboard.pages.payments.order_amount_allowed": "Bestelbedrag restricties",
   "dashboard.pages.payments.order_amount_allowed_label": "Deze methode wordt alleen weergegeven als aan deze voorwaarde is voldaan.",
   "dashboard.pages.payments.minimum_order_amount": "Minimaal toegestane bestelbedrag",
@@ -280,10 +280,10 @@
   "dashboard.pages.payments.client_side": "Cliënt Side Encryption",
   "dashboard.pages.payments.client_side_label": "Gedrag van cliëntzijdige betaalmethode in- of uitschakelen.",
   "dashboard.pages.payments.seperate_authorize_and_capture": "Losse authorize en capture",
-  "dashboard.pages.payments.seperate_authorize_and_capture_label": "Wanneer deze optie is ingeschakeld, dien je de betaling van de creditcard handmatig vast te leggen (capture).",
-  "dashboard.pages.payments.allowed_creditcards": "Toegestane Creditcards",
-  "dashboard.pages.payments.allowed_creditcards_label": "Alleen geselecteerde creditcards worden op deze manier getoond",
-  "dashboard.pages.payments.search_creditcard": "Zoek Creditcard",
+  "dashboard.pages.payments.seperate_authorize_and_capture_label": "Wanneer deze optie is ingeschakeld, dient u de betaling van de credit- of debitcard handmatig vast te leggen (capture).",
+  "dashboard.pages.payments.allowed_creditcards": "Toegestane Cards",
+  "dashboard.pages.payments.allowed_creditcards_label": "Alleen geselecteerde credit- of debitcards worden op deze manier getoond",
+  "dashboard.pages.payments.search_creditcard": "Zoek Credit- of debitcard",
   "dashboard.pages.payments.allowed_giftcards": "Toegestane cadeaukaarten",
   "dashboard.pages.payments.allowed_giftcards_label": "Alleen geselecteerde cadeaukaarten worden op deze manier getoond",
   "dashboard.pages.payments.add_custom_giftcard": "Eigen cadeaukaart toevoegen",
@@ -296,13 +296,13 @@
   "dashboard.pages.payments.enter_giftcard_details": "Voer cadeaukaartgegevens in",
   "dashboard.pages.payments.service_code": "Service Code",
   "dashboard.pages.payments.custom_icon_url": "Aangepaste cadeaukaart logo URL",
-  "dashboard.pages.payments.payment_methods": "Betalingsmethoden",
-  "dashboard.pages.payments.verification_methods": "Betalingsmethoden",
-  "dashboard.pages.payments.configure_your_payment_method_settings": "Configureer uw betalingsmethode-instellingen",
-  "dashboard.pages.payments.configure_your_verification_method_settings": "Configureer uw instellingen voor de verificatiemethode",
+  "dashboard.pages.payments.payment_methods": "Betaalmethoden",
+  "dashboard.pages.payments.verification_methods": "Verificatiemethoden",
+  "dashboard.pages.payments.configure_your_payment_method_settings": "Configureer uw betaalmethoden instellingen",
+  "dashboard.pages.payments.configure_your_verification_method_settings": "Configureer uw instellingen voor de verificatiemethoden",
   "dashboard.pages.payments.customer_type": "Klant type",
   "dashboard.pages.payments.display_type": "Weergavetype",
-  "dashboard.pages.payments.display_type_label": "Deze instelling bepaalt hoe de bankselectie voor deze betaalmethode wordt weergegeven bij het afrekenen.<br />Je kunt kiezen tussen keuzerondjes of een vervolgkeuzelijst.",
+  "dashboard.pages.payments.display_type_label": "Deze instelling bepaalt hoe de bankselectie voor deze betaalmethode wordt weergegeven bij het afrekenen.<br />U kunt kiezen tussen keuzerondjes of een vervolgkeuzelijst.",
   "dashboard.pages.payments.display_types.radio": "Radio",
   "dashboard.pages.payments.display_types.dropdown": "Laten vallen",
   "dashboard.pages.payments.send_email_instruction": "Stuur betalingsinstructie e-mail",
@@ -332,19 +332,22 @@
   "dashboard.pages.payments.idin.display_mode": "iDIN modus:",
   "dashboard.pages.payments.idin.display_mode.product": "Specifieke producten",
   "dashboard.pages.payments.idin.display_mode.global": "Globaal",
-  "dashboard.pages.payments.idin.display_mode_label": "Met deze instelling kun je selecteren of iDIN is ingeschakeld voor alle producten in de winkel (globaal) of alleen voor specifieke producten. Voor specifieke producten moet je het ook inschakelen voor de producten in de PrestaShop-catalogus.",
+  "dashboard.pages.payments.idin.display_mode_label": "Met deze instelling kunt u selecteren of iDIN is ingeschakeld voor alle producten in de winkel (globaal) of alleen voor specifieke producten. Voor specifieke producten dient u het ook in te schakelen voor de producten in de PrestaShop-catalogus.",
+  "dashboard.pages.settings.credentials_label": "Haal uw Buckaroo website gegevens op uit de <a href='https://plaza.buckaroo.nl' target='_blank' class='text-secondary font-semibold'>Buckaroo Plaza</a>",
+  "dashboard.pages.settings.refunds_label_label": "Indien ingeschakeld, kunt u (gedeeltelijke) terugbetalingen rechtstreeks vanuit uw PrestaShop-beheergebied uitvoeren <a href='#' target='_blank' class='text-secondary font-semibold'>Read more</a>",
+  "dashboard.pages.settings.refunds_label_explanation": "Deze omschrijving wordt gebruikt bij de terugbetaling en zal zichtbaar zijn in Buckaroo en op het bankafschrift van de consument. Wij adviseren om de webshopnaam te gebruiken, zodat klanten de betaling gemakkelijk kunnen herkennen.",
   "dashboard.pages.settings.settings": "Instellingen",
-  "dashboard.pages.settings.settings_label": "Configureer je instellingen",
+  "dashboard.pages.settings.settings_label": "Configureer uw instellingen",
   "dashboard.pages.settings.mode": "Modus",
   "dashboard.pages.settings.mode_label": "Verander eenvoudig de modus",
   "dashboard.pages.settings.no_im_testing": "Nee, ik wil testen",
-  "dashboard.pages.settings.when_your_shop_is_not_live_yet": "Wanneer je webwinkel nog niet live is",
+  "dashboard.pages.settings.when_your_shop_is_not_live_yet": "Wanneer u webwinkel nog niet live is",
   "dashboard.pages.settings.yes_im_ready_to_receive_payments": "Ja, ik ben klaar om betalingen te ontvangen",
-  "dashboard.pages.settings.your_shop_is_live_and_ready_to_receive_real_payments": "Je webwinkel is live en klaar om echte betalingen te ontvangen",
-  "dashboard.pages.settings.credentials": "Identificatie",
+  "dashboard.pages.settings.your_shop_is_live_and_ready_to_receive_real_payments": "Uw webwinkel is live en klaar om echte betalingen te ontvangen",
+  "dashboard.pages.settings.credentials": "Buckaroo gegevens",
   "dashboard.pages.settings.test_connection": "Test Gegevens",
-  "dashboard.pages.settings.successfully_verified_the_credentials": "De inloggegevens zijn succesvol geverifieerd!",
-  "dashboard.pages.settings.the_credentials_are_not_valid": "De inloggegevens zijn onjuist!",
+  "dashboard.pages.settings.successfully_verified_the_credentials": "De gegevens zijn succesvol geverifieerd!",
+  "dashboard.pages.settings.the_credentials_are_not_valid": "De gegevens zijn onjuist!",
   "dashboard.pages.settings.website_key": "Website key",
   "dashboard.pages.settings.secret_key": "Secret key",
   "dashboard.pages.settings.transaction_description": "Transactie Beschrijving",
@@ -366,17 +369,17 @@
   "dashboard.pages.settings.add": "Toevoegen",
   "dashboard.pages.settings.remove": "Verwijder",
   "dashboard.pages.settings.custom_scripts": "Aangepaste scripts",
-  "dashboard.pages.settings.custom_scripts_label": "Voeg aangepaste javascript of css code toe aan je checkout.",
+  "dashboard.pages.settings.custom_scripts_label": "Voeg aangepaste javascript of css code toe aan uw checkout.",
   "dashboard.pages.settings.custom_scripts_placeholder": "Javascript / CSS (https://example.com/style.css)",
   "dashboard.pages.settings.settings_successfully_updated": "Instellingen succesvol bijgewerkt.",
   "dashboard.pages.settings.welcome_to_buckaroo": "Welkom bij Buckaroo",
-  "dashboard.pages.settings.explanation_intro": "Welkom bij het configuratiescherm van de Buckaroo Payment app voor jouw PrestaShop webshop. In dit scherm kun je de app helemaal naar wens instellen. Hieronder vind je de stappen om de instellingen te configureren. Voor verdere vragen verwijzen wij je naar onze documentatie.",
+  "dashboard.pages.settings.explanation_intro": "Welkom bij het configuratiescherm van de Buckaroo Payment app voor jouw PrestaShop webshop. In dit scherm kunt u de app helemaal naar wens instellen. Hieronder vind u de stappen om de instellingen te configureren. Voor verdere vragen verwijzen wij u naar onze <a href='https://docs.buckaroo.io/docs/prestashop' target='_blank' class='bg-primary inline-block rounded text-white p-1'>documentatie pagina</a>.",
   "dashboard.pages.settings.step_three": "Klik op ‘test verbinding’, indien correct ga verder naar stap 4.",
   "dashboard.pages.settings.step_four": "Configureer de geavanceerde instellingen &amp; Betaalmethodes",
-  "dashboard.pages.settings.step_five": "Begin met testen, als het testen goed gaat, kun je LIVE transacties starten",
+  "dashboard.pages.settings.step_five": "Begin met testen, als het testen goed gaat, kunt u LIVE transacties starten",
   "dashboard.pages.settings.advance_settings": "Geavanceerde Instellingen",
   "dashboard.pages.settings.hide_advance_settings": "Geavanceerde Instellingen Verbergen",
-  "dashboard.pages.settings.re_stock_products": "Voorraad aanvullen bij retourproducten",
+  "dashboard.pages.settings.re_stock_products": "De voorraad aanvullen bij retourproducten",
   "dashboard.pages.settings.re_stock_products_label": "Of terugbetaalde producten moeten worden teruggeplaatst in de voorraad (waardoor de voorraadhoeveelheid wordt verhoogd).",
   "dashboard.pages.settings.generate_credit_slip": "Een creditnota genereren",
   "dashboard.pages.settings.generate_credit_slip_label": "Of er een creditnota moet worden gegenereerd.",
@@ -385,7 +388,7 @@
   "dashboard.pages.settings.generate_negative_payments": "Een negatieve betaling bij terugbetalingen aanmaken",
   "dashboard.pages.settings.generate_negative_payments_label": "Of er ook een negatieve betaling moet worden gecreëerd bij het uitvoeren van een terugbetaling.",
   "payment_methods.applepay": "Apple Pay",
-  "payment_methods.creditcard": "Creditcard",
+  "payment_methods.creditcard": "Cards",
   "payment_methods.giftcard": "Giftcard",
   "payment_methods.ideal": "iDEAL",
   "payment_methods.paybybank": "PayByBank",
