Add financialWarning for BNPL methods

--- a/dev/lang/php_nl.json
+++ b/dev/lang/php_nl.json
@@ -234,6 +234,10 @@
   "dashboard.channel_selector.select_channel": "Selecteer Kanaal",
   "dashboard.channel_selector.select_channel_label": "Elk kanaal heeft zijn eigen configuratie-instellingen.",
   "dashboard.country_select.search_countries": "Zoek Landen",
+  "dashboard.config.financial_warning": "Financiële Waarschuwing",
+  "dashboard.config.financial_warning.label": "Vanwege de voorschriften voor achteraf betaalmethoden in Nederland dien je klanten te waarschuwen voor het gebruik van een achteraf betaalmethode omdat het gemakkelijk kan leiden tot schulden. Wanneer deze functie is ingeschakeld, wordt er een waarschuwing weergegeven tijdens het afrekenen. Let op dat deze instelling alleen van toepassing is op klanten in Nederland.",
+  "dashboard.config.financial_warning.options.enabled": "Ingeschakeld",
+  "dashboard.config.financial_warning.options.disabled": "Uitgeschakeld",
   "dashboard.menu.channel": "Kanaal",
   "dashboard.menu.settings": "Instellingen",
   "dashboard.menu.payment_methods": "Betaalmethoden",
