--- a/dev/lang/php_en.json
+++ b/dev/lang/php_en.json
@@ -413,7 +413,7 @@
   "payment_methods.idin": "iDIN",
   "payment_methods.in3": "In3",
   "payment_methods.kbc": "KBC",
-  "payment_methods.klarnakp": "Klarna",
+  "payment_methods.klarna": "Klarna",
   "payment_methods.mbway": "MB WAY",
   "payment_methods.multibanco": "Multibanco",
   "payment_methods.paybybank": "PayByBank",
