--- a/dev/lang/php_fr.json
+++ b/dev/lang/php_fr.json
@@ -412,7 +412,7 @@
   "payment_methods.ideal": "idéal",
   "payment_methods.idin": "IDIN",
   "payment_methods.in3": "Dans3",
-  "payment_methods.kbc": "KBC",
+  "payment_methods.kbcpaymentbutton": "KBC",
   "payment_methods.klarna": "Klarna",
   "payment_methods.mbway": "VOIE MB",
   "payment_methods.multibanco": "Multibanco",
