--- a/dev/lang/php_de.json
+++ b/dev/lang/php_de.json
@@ -427,5 +427,7 @@
   "payment_methods.transfer": "Überweisen",
   "payment_methods.trustly": "Vertrauenswürdig",
   "payment_methods.wechatpay": "WeChatPay",
-  "verification_methods.idin": "iDIN"
+  "verification_methods.idin": "iDIN",
+  "dashboard.pages.payments.displayInCheckout": "Group Credit-debitcards",
+  "dashboard.pages.payments.displayInCheckoutDesc": "Cards option on how to show the brands in the checkout. <br/> <b>Separate</b>: Card issuers are showed seperately in the checkout.</br><b>Grouped</b>: Card issuers are showed within one group."
 }
