add Knaken payment method and update php sdk

--- a/dev/lang/php_de.json
+++ b/dev/lang/php_de.json
@@ -427,5 +427,6 @@
   "payment_methods.transfer": "Überweisen",
   "payment_methods.trustly": "Vertrauenswürdig",
   "payment_methods.wechatpay": "WeChatPay",
+  "payment_methods.knaken": "Knaken",
   "verification_methods.idin": "iDIN"
 }
