--- a/dev/lang/php_nl.json
+++ b/dev/lang/php_nl.json
@@ -425,5 +425,6 @@
   "payment_methods.transfer": "Transfer",
   "payment_methods.trustly": "Trustly",
   "payment_methods.wechatpay": "WeChatPay",
+  "payment_methods.knaken": "Knaken",
   "verification_methods.idin": "iDIN"
 }
