update fee table, add fee settings

--- a/dev/lang/php_en.json
+++ b/dev/lang/php_en.json
@@ -142,6 +142,13 @@
   "dashboard.pages.settings.refunds_label": "Refund Description",
   "dashboard.pages.settings.refunds_label_explanation": "This description is used for the refunds and will be visible in Buckaroo and on the bank statement of the consumer. We recommend using the webshop name so customers can easily recognize the payment.",
   "dashboard.pages.settings.refunds_label_label": "When enabled you can do (partial) refunds directly from your PrestaShop admin area <a href='#' target='_blank' class='text-secondary font-semibold'>Read more</a>",
+  "dashboard.pages.settings.payment_fee": "Payment Fees",
+  "dashboard.pages.settings.payment_fee_percentage_mode": "Fee percentage mode",
+  "dashboard.pages.settings.payment_fee_percentage_mode_description": "This setting only applies to percentage-based Buckaroo fees. <br/> Please choose over which amount the fee percentage is calculated.",
+  "dashboard.pages.settings.subtotal": "Subtotal",
+  "dashboard.pages.settings.subtotal_incl_tax": "Subtotal incl. tax",
+  "dashboard.pages.settings.payment_fee_frontend_label": "Payment fee frontend label",
+  "dashboard.pages.settings.payment_fee_frontend_label_description": "This label will be displayed next to the fee on the checkout, order, invoice and creditmemo pages and pdfs.",
   "dashboard.pages.settings.remove": "Remove",
   "dashboard.pages.settings.return_url": "Return URL",
   "dashboard.pages.settings.return_url_explanation": "When this field is left empty, the customer will return to the default PrestaShop confirmation page.",
