--- a/dev/lang/php_nl.json
+++ b/dev/lang/php_nl.json
@@ -140,7 +140,13 @@
   "dashboard.pages.settings.refunds_label": "Terugbetaling omschrijving",
   "dashboard.pages.settings.refunds_label_explanation": "Deze omschrijving wordt gebruikt bij de terugbetaling en zal zichtbaar zijn in Buckaroo en op het bankafschrift van de consument. Wij adviseren om de webshopnaam te gebruiken, zodat klanten de betaling gemakkelijk kunnen herkennen.",
   "dashboard.pages.settings.refunds_label_label": "Indien ingeschakeld, kunt u (gedeeltelijke) terugbetalingen rechtstreeks vanuit uw PrestaShop-beheergebied uitvoeren <a href='#' target='_blank' class='text-secondary font-semibold'>Read more</a>",
-  "dashboard.pages.settings.remove": "Verwijder",
+  "dashboard.pages.settings.payment_fee": "Transactiekosten",
+  "dashboard.pages.settings.payment_fee_percentage_mode": "Transactiekosten percentage modus",
+  "dashboard.pages.settings.payment_fee_percentage_mode_description": "Deze instelling is alleen van toepassing op percentage-gebaseerde Buckaroo-kosten. <br/> Kies over welk bedrag het kostenpercentage wordt berekend.",
+  "dashboard.pages.settings.subtotal": "Subtotaal",
+  "dashboard.pages.settings.subtotal_incl_tax": "Subtotaal incl. btw",
+  "dashboard.pages.settings.payment_fee_frontend_label": "Naam voor transactiekosten in de checkout",
+  "dashboard.pages.settings.payment_fee_frontend_label_description": "Dit label wordt weergegeven naast de kosten op de afreken-, bestel-, factuur- en creditnota-pagina's en pdf's.","dashboard.pages.settings.remove": "Verwijder",
   "dashboard.pages.settings.return_url": "Return-URL",
   "dashboard.pages.settings.return_url_explanation": "Wanneer dit veld leeg wordt gelaten, keert de klant terug naar de standaard PrestaShop bevestigingspagina.",
   "dashboard.pages.settings.return_url_label": "Stel een aangepaste return-URL in nadat de klant de betaling heeft voltooid.",
