--- a/dev/lang/php_en.json
+++ b/dev/lang/php_en.json
@@ -143,6 +143,7 @@
   "dashboard.pages.settings.refunds_label_explanation": "This description is used for the refunds and will be visible in Buckaroo and on the bank statement of the consumer. We recommend using the webshop name so customers can easily recognize the payment.",
   "dashboard.pages.settings.refunds_label_label": "When enabled you can do (partial) refunds directly from your PrestaShop admin area <a href='#' target='_blank' class='text-secondary font-semibold'>Read more</a>",
   "dashboard.pages.settings.payment_fee": "Payment Fees",
+  "dashboard.pages.settings.payment_fee_description": "Here, you can configure various payment fee options, including setting the fee percentage and customizing the fee name for example.",
   "dashboard.pages.settings.payment_fee_percentage_mode": "Fee percentage mode",
   "dashboard.pages.settings.payment_fee_percentage_mode_description": "This setting only applies to percentage-based Buckaroo fees. <br/> Please choose over which amount the fee percentage is calculated.",
   "dashboard.pages.settings.subtotal": "Subtotal",
