--- a/dev/lang/php_fr.json
+++ b/dev/lang/php_fr.json
@@ -143,6 +143,7 @@
   "dashboard.pages.settings.refunds_label_explanation": "Cette description sert aux remboursements et sera visible dans Buckaroo et sur le relevé bancaire du consommateur. ",
   "dashboard.pages.settings.refunds_label_label": "Lorsqu'il est activé, vous pouvez effectuer des remboursements (partiels) directement depuis votre zone d'administration PrestaShop <a href='#' target='_blank' class='text-secondary font-semibold'>En savoir plus</a>",
   "dashboard.pages.settings.payment_fee": "Frais de paiement",
+  "dashboard.pages.settings.payment_fee_description": "Ici, vous pouvez configurer diverses options de frais de paiement, y compris définir le pourcentage des frais et personnaliser le nom des frais.",
   "dashboard.pages.settings.payment_fee_percentage_mode": "Mode de pourcentage des frais",
   "dashboard.pages.settings.payment_fee_percentage_mode_description": "Ce paramètre s'applique uniquement aux frais Buckaroo basés sur un pourcentage. <br/> Veuillez choisir sur quel montant le pourcentage des frais est calculé.",
   "dashboard.pages.settings.subtotal": "Sous-total",
