Blik payment method added

--- a/dev/lang/php_de.json
+++ b/dev/lang/php_de.json
@@ -182,6 +182,7 @@
   "payment_methods.bancontactmrcash": "Bancontact",
   "payment_methods.belfius": "Belfius",
   "payment_methods.billink": "Billink",
+  "payment_methods.blik": "Blik",
   "payment_methods.creditcard": "Karten",
   "payment_methods.eps": "EPS",
   "payment_methods.giftcard": "Geschenkkarte",
