--- a/dev/lang/php_nl.json
+++ b/dev/lang/php_nl.json
@@ -178,6 +178,7 @@
   "payment_methods.bancontactmrcash": "Bancontact",
   "payment_methods.belfius": "Belfius",
   "payment_methods.billink": "Billink",
+  "payment_methods.blik": "Blik",
   "payment_methods.creditcard": "Cards",
   "payment_methods.eps": "EPS",
   "payment_methods.giftcard": "Giftcard",
